--- a/empi-web/src/main/webapp/WEB-INF/static/css/button.css
+++ b/empi-web/src/main/webapp/WEB-INF/static/css/button.css
@@ -71,3 +71,6 @@
 .icon-cut{
 	background: url('icons/buttons/cut.png') no-repeat;
 }
+.icon-uploadfile{
+	background: url('icons/buttons/uploadfile.png') no-repeat;
+}
