--- a/yjk-web/src/main/webapp/WEB-INF/views/jspf/import-js.jspf
+++ b/yjk-web/src/main/webapp/WEB-INF/views/jspf/import-js.jspf
@@ -1,5 +1,6 @@
 <script type="text/javascript" src="${ctx}/static/easyui/jquery.easyui.min.js"></script>
 <script type="text/javascript" src="${ctx}/static/easyui/locale/easyui-lang-zh_CN.js"></script>
+<script type="text/javascript" src="${ctx}/static/easyui/ext/datagrid-export.js"></script>
 <script type="text/javascript" src="${ctx}/static/jQuery-Validation-Engine/js/jquery.validationEngine.min-ciaoca.js"></script>
 <script type="text/javascript" src="${ctx}/static/jQuery-Validation-Engine/js/languages/jquery.validationEngine-zh_CN-ciaoca.js"></script>
 <script type="text/javascript" src="${ctx}/static/js/jquery.ewcms.js"></script>
