--- a/yjk-web/src/main/webapp/WEB-INF/views/jspf/import-css.jspf
+++ b/yjk-web/src/main/webapp/WEB-INF/views/jspf/import-css.jspf
@@ -9,6 +9,6 @@
     </script>
 
     <script type="text/javascript" src="${ctx}/static/jquery/jquery-3.1.1.min.js"></script>
-    <!-- <script type="text/javascript" src="${ctx}/static/jquery/jquery-migrate-3.0.0.min.js"></script> -->
+    <script type="text/javascript" src="${ctx}/static/jquery/jquery-migrate-3.0.0.min.js"></script>
     <script type="text/javascript" src="${ctx}/static/js/loading.js"></script>
     
