--- a/yjk-web/src/main/webapp/WEB-INF/static/css/button.css
+++ b/yjk-web/src/main/webapp/WEB-INF/static/css/button.css
@@ -101,3 +101,6 @@
 .icon-verify {
 	background: url('icons/buttons/verify.png') no-repeat;
 }
+.icon-scheduling{
+	background: url('icons/buttons/scheduler.png') no-repeat;
+}
