--- a/yjk-web/src/main/report/drugform_1.jrxml
+++ b/yjk-web/src/main/report/drugform_1.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="drugform_1" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="1031"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="drugFormId" class="java.lang.Long">
 		<defaultValueExpression><![CDATA[10]]></defaultValueExpression>
 	</parameter>
@@ -17,7 +17,7 @@ left join sec_user_organization_job suoj on su.id = suoj.user_id
 left join sec_organization so on suoj.organization_id = so.id
 left join zd_common_name_contents zcnc on sdf.commonnamecontents_id = zcnc.id
 left join zd_common_name zcn on zcnc.common_name_id = zcn.id
-left join zd_administration za on zcn.administration_id = za.id
+left join zd_administration za on zcnc.administration_id = za.id
 where sdf.id = $P{drugFormId}]]>
 	</queryString>
 	<field name="id" class="java.lang.String"/>
